# flavIA

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml
.flavia/: .connection_checks.yaml
doc/: CHANGELOG.md  SAFETY.md  architecture.md  configuration.md  installation.md  roadmap.md  telegram.md  usage.md  use-cases.md
doc/roadmap/: area-1-multimodal-file-processing.md  area-10-telegram-file-delivery.md  area-11-semantic-retrieval.md  area-2-agent-system-improvements.md  area-3-messaging-platform-framework.md  area-4-cli-improvements.md  area-5-file-modification-tools.md  area-6-academic-workflow-tools.md  area-7-external-service-integration.md  area-8-context-window-management.md  area-9-web-academic-research-tools.md  rag-generic-hardening-plan.md
doc/roadmap/active/: area-10-telegram-file-delivery.md  area-2-agent-system-improvements.md  area-3-messaging-platform-framework.md  area-4-cli-improvements.md  area-6-academic-workflow-tools.md  area-7-external-service-integration.md  area-9-web-academic-research-tools.md
doc/roadmap/completed/: area-1-multimodal-file-processing.md  area-11-semantic-retrieval.md  area-5-file-modification-tools.md  area-8-context-window-management.md  rag-generic-hardening-plan.md  task-10.1-structured-agent-responses.md  task-3.3-multi-bot-support.md  task-3.4-abstract-messaging-interface.md
src/flavia/: __init__.py  __main__.py  cli.py  display.py  provider_wizard.py  setup_wizard.py  venv_bootstrap.py
src/flavia/agent/: __init__.py  base.py  context.py  profile.py  recursive.py  status.py
src/flavia/config/: __init__.py  bots.py  loader.py  providers.py  settings.py
src/flavia/content/: __init__.py  catalog.py  scanner.py  summarizer.py  vision.py
src/flavia/content/converters/: __init__.py  audio_converter.py  base.py  image_converter.py  mistral_key_manager.py  mistral_ocr_converter.py  office_converter.py  pdf_converter.py  registry.py  text_reader.py  video_converter.py  video_frame_extractor.py
src/flavia/content/converters/online/: __init__.py  base.py  webpage.py  youtube.py
src/flavia/content/indexer/: __init__.py  chunker.py  citation_log.py  embedder.py  fts.py  index_manager.py  rag_debug_log.py  retrieval.py  vector_store.py  video_retrieval.py
src/flavia/defaults/: bots.yaml  models.yaml  providers.yaml
src/flavia/display/: __init__.py  commands.py  console.py  formatting.py  styles.py  theme.py
src/flavia/interfaces/: __init__.py  base_bot.py  bot_runner.py  catalog_command.py  cli_interface.py  commands.py  settings_command.py  telegram_interface.py
src/flavia/settings/: __init__.py  categories.py  persistence.py  validators.py
src/flavia/setup/: __init__.py  agent_wizard.py  prompt_utils.py  provider_wizard.py  telegram_wizard.py
src/flavia/tools/: __init__.py  backup.py  base.py  permissions.py  registry.py  write_confirmation.py
src/flavia/tools/academic/: __init__.py  compile_latex.py
src/flavia/tools/compact/: __init__.py  compact_context.py
src/flavia/tools/content/: __init__.py  _conversion_helpers.py  add_online_source.py  analyze_image.py  convert_office.py  convert_pdf.py  fetch_online_source.py  get_summary.py  query_catalog.py  refresh_catalog.py  search_chunks.py  transcribe_media.py
src/flavia/tools/read/: __init__.py  get_file_info.py  list_files.py  read_file.py  search_files.py
src/flavia/tools/research/: __init__.py  academic_search.py  doi_resolver.py  web_search.py
src/flavia/tools/research/academic_providers/: __init__.py  base.py  openalex.py  semantic_scholar.py
src/flavia/tools/research/search_providers/: __init__.py  base.py  bing.py  brave.py  duckduckgo.py  google.py
src/flavia/tools/setup/: __init__.py  convert_pdfs.py  create_agents_config.py
src/flavia/tools/spawn/: __init__.py  spawn_agent.py  spawn_predefined_agent.py
src/flavia/tools/write/: __init__.py  append_file.py  create_directory.py  delete_file.py  edit_file.py  insert_text.py  preview.py  remove_directory.py  write_file.py
tests/: conftest.py  test_academic_search_tool.py  test_agent_context_prompt.py  test_agent_permissions.py  test_agent_wizard.py  test_analyze_image_tool.py  test_audio_video_converter.py  test_backup.py  test_base_messaging_bot.py  test_bot_runner.py  test_bots.py  test_catalog_command.py  test_catalog_search_live.py  test_citation_log.py  test_cli_agent_switching.py  test_cli_catalog_update.py  test_cli_command_registry.py  test_cli_create_agent_defaults.py  test_cli_model_switching.py  test_cli_project_history.py  test_cli_quit_interrupt.py  test_cli_tab_completion.py  test_cli_wait_feedback.py  test_compact_context_tool.py  test_compile_latex.py  test_config.py  test_content_catalog.py  test_content_conversion_tools.py  test_content_index_manager.py  test_content_indexer_chunker.py  test_content_indexer_retrieval.py  test_content_summarizer_regressions.py  test_context_compaction.py  test_context_compaction_live.py  test_converter_registry.py  test_create_agents_config_tool.py  test_display.py  test_doi_resolver_tool.py  test_dry_run.py  test_embedder.py  (+40 more)
tests/helpers/: __init__.py  questionary_mocks.py
